cargo-features = ["panic-immediate-abort"]

[package]
name = "mobile-hand-warmer"
version = "0.1.0"
edition = "2024"
authors = ["mokurin000"]
license = "MIT"

[dependencies]
num_cpus = "1.17.0"
ring = { version = "0.17.14", default-features = false, features = [
    "dev_urandom_fallback",
], optional = true }

[features]
sha = ["dep:ring"]

[profile.release]
lto = true
strip = true
panic = "immediate-abort"
opt-level = "z"
